crates/doodle-core/tests/snapshots/broken_syntax__41_unicode_escape_in_bytes.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[malformed-escape]: `\u` isn't allowed in a bytes literal — use `\xHH`
  --> 41-unicode-escape-in-bytes.doodle:1:11
1 | let b = b"\u{41}"
  |           ^^
